# tempfile-fast-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: rust-ubuntu.yml  rust-win.yml
src/: lib.rs  linux.rs  persistable.rs  sponge.rs
tests/: persist.rs  sponge.rs
