[package]
name = "tempfile-fast"
version = "0.3.3"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Support for Linux-specific tempfile extensions"
repository = "https://github.com/FauxFaux/tempfile-fast-rs"
readme = "README.md"
categories = ["filesystem", "os"]
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.7"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.34"
